samples/_failures_safe/1761092958_ceaa61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f820cbe.c: In function ‘main’:
./samples/SAFE/__tmp_3f820cbe.c:126:14: error: expected ‘)’ at end of input
  126 |     if (fgets
      |        ~     ^
      |              )
./samples/SAFE/__tmp_3f820cbe.c:126:5: error: expected declaration or statement at end of input
  126 |     if (fgets
      |     ^~
